--- a/src/App.css
+++ b/src/App.css
@@ -1,14 +1,57 @@
-/* footer */
-.footer {
-  position: fixed;
-  left: 0;
-  bottom: 0;
+/* body */
+body {
+  margin: 0 auto;
   width: 100%;
-  text-align: center;
+}
+#section {
+  min-height: 100vh;
+  max-height: 100%;
 }
 
 #avatar-image {
   height: 32px;
   width: 32px;
   border-radius: 100%;
+}
+
+.google-facebook-login {
+  display: flex;
+  justify-content: space-around;
+  width: 100%;
+  flex-direction: row;
+  flex-wrap: wrap;
+}
+
+.react-icons {
+  color: black;
+  border: 5px solid blue;
+}
+
+.react-icons:hover {
+  cursor: pointer;
+}
+
+#login-icon {
+  height: 70px;
+}
+
+#login-icon:hover {
+  cursor: pointer;
+}
+
+/* #facebook-button {
+  height: 50px;
+  color: blue;
+}
+
+#facebook-button:hover {
+  cursor: pointer;
+} */
+
+/* footer */
+.footer {
+  position: relative;
+  bottom: 0;
+  width: 100%;
+  text-align: center;
 }
