--- a/src/styles/checkoutForm.css
+++ b/src/styles/checkoutForm.css
@@ -1,4 +1,4 @@
-.row {
+.row-checkout {
   display: -ms-flexbox; /* IE10 */
   display: flex;
   -ms-flex-wrap: wrap; /* IE10 */
@@ -27,12 +27,12 @@
   padding: 0 16px;
 }
 
-.container {
+.container-checkout {
   background-color: #f2f2f2;
   padding: 5px 20px 15px 20px;
   border: 1px solid lightgrey;
   border-radius: 3px;
-}
+} 
 
 input[type="text"] {
   width: 100%;
