--- a/src/App.css
+++ b/src/App.css
@@ -1,8 +1,18 @@
+@import url("https://fonts.googleapis.com/css?family=Montserrat:300,400,500,600,700,800,900|Rubik:300,400,500,700,900");
+
 /* body */
 body {
   margin: 0 auto;
+  padding: 0 auto;
   width: 100%;
+  font-family: "Rubik", sans-serif;
+  font-size: 14px;
+  font-weight: 400;
+  background: #ffffff;
+  color: #000000;
+  text-shadow: rgba(0, 0, 0, 0.01) 0 0 1px;
 }
+
 #section {
   min-height: 100vh;
   max-height: 100%;
@@ -48,16 +58,15 @@ body {
   cursor: pointer;
 }
 
-
 /* main page */
 
 .jumbotron {
   background-image: url("https://cdn.wallpapersafari.com/30/98/DmHeZJ.jpg");
   background-size: cover;
+  background-position: center;
   background-repeat: no-repeat;
   min-height: 100%;
   height: 750px;
-  max-height: 100vh;
   z-index: -1000;
 }
 
@@ -67,6 +76,7 @@ body {
   background-color: black;
   border-radius: 30px;
   opacity: 6;
+  opacity: 0.9;
 }
 
 .section {
@@ -74,11 +84,23 @@ body {
   max-height: 100%;
 }
 
+#game-card {
+  height: 400px;
+}
+
+#game-card:hover {
+  cursor: pointer;
+}
+
 #card-image {
   height: 200px;
 }
-/* end main page */
 
+/* #price-number{
+
+} */
+
+/* end main page */
 
 /* detail page */
 
@@ -94,9 +116,7 @@ body {
   width: 100%;
 }
 
-
 /* end detail page */
-
 
 /* footer */
 .footer {
