--- a/src/App.css
+++ b/src/App.css
@@ -125,3 +125,41 @@ body {
   width: 100%;
   text-align: center;
 }
+
+
+/* Pagination */
+
+.pagination {
+    display: flex;
+    justify-content: center;
+    margin:10px;
+}
+
+.pagination ul {
+    display: inline-block;
+    padding-left: 15px;
+    padding-right: 15px;
+}
+
+.pagination li {
+    display: inline-block;
+    margin-right: 15px;
+}
+
+.pagination li a {
+    outline: 0;
+    background-color: transparent;
+    color:black;
+}
+
+
+.pagination .active {
+    width: 30px;
+    height: 30px;
+    border-radius: 50%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    background-color: white;
+    z-index:0;
+}
