--- a/src/styles/cart_styles.css
+++ b/src/styles/cart_styles.css
@@ -102,14 +102,7 @@ p a:hover::after
 {
 	opacity: 0.2;
 }
-::selection
-{
-	
-}
-p::selection
-{
-	
-}
+
 h1{font-size: 48px;}
 h2{font-size: 36px;}
 h3{font-size: 24px;}
@@ -123,15 +116,7 @@ h1, h2, h3, h4, h5, h6
 	-webkit-text-shadow: rgba(0,0,0,.01) 0 0 1px;
 	text-shadow: rgba(0,0,0,.01) 0 0 1px;
 }
-h1::selection, 
-h2::selection, 
-h3::selection, 
-h4::selection, 
-h5::selection, 
-h6::selection
-{
-	
-}
+
 .form-control
 {
 	color: #db5246;
@@ -661,10 +646,10 @@ section
 	line-height: 48px;
 	cursor: pointer;
 }
-.custom_dropdown_placeholder i
+/* .custom_dropdown_placeholder i
 {
 	
-}
+} */
 .custom_list
 {
 	text-align: left;
@@ -720,7 +705,7 @@ select
 {
 	display: inline;
 	border: 0;
-	width: auto;
+	/* width: auto; */
 	margin-left: 10px;
 	outline: none;
 	-webkit-appearance: none;
@@ -1099,7 +1084,7 @@ select option
 	display: block;
 	position: relative;
 	border-bottom: solid 1px rgba(255,255,255,0.1);
-	vertical-align: middle;
+	/* vertical-align: middle; */
 }
 .page_menu_item > a
 {
@@ -1629,10 +1614,10 @@ select option
 {
 	font-weight: 500;
 }
-.logos
+/* .logos
 {
 	
-}
+} */
 .logos_list li
 {
 	display: inline-block;
